--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,18 +1,24 @@
 @import '~scss/colors';
 @import '~scss/mixins';
 @import '~scss/variable';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap';
 
 html {
+    position: relative;
+
+    min-height: 100%;
+
     font-size: 10px;
 }
 
 body {
     margin: 0;
+    margin-bottom: 15rem;
     padding: 0;
+
+    font-family: Poppins, sans-serif;
+
+    background-color: $gray;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: $gray;
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 15rem;
 }
